# MyPluginPassivityHumanoid

./: CMakeCache.txt  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
etc/: MyPluginPassivityHumanoid.in.yaml
src/: MyPluginPassivityHumanoid.cpp  MyPluginPassivityHumanoid.h
tests/etc/: mc_rtc.yaml
